--- a/client/public/style.css
+++ b/client/public/style.css
@@ -60,8 +60,10 @@ h1 {
 }
 
 h2 {
-	font-weight: 600;
+	/*font-weight: 600;*/
 	margin: 2px 0;
+	color: #808080;
+	margin-bottom: 5px;
 }
 
 a {
@@ -82,22 +84,23 @@ a:hover {
 	width: 98%;
 	max-width: 680px;
 	margin: 5px auto;
-	border-radius: 3px;
+	/*border-radius: 3px;*/
 	background-color: #ffff;
-	height: 1200px;
 	overflow: hidden;
 	white-space: nowrap;
+	border: 1px solid #cacaca;
 }
 
-.beer-pic {
+.beer-pic, .addreview-button {
 	width: 180px;
 	margin: 3px;
+	vertical-align: text-bottom;
 }
 
 .beer-info, .beer-rankings {
 	display: inline-block;
 	margin-left: 15px;
-	vertical-align: top;
+	/*vertical-align: top;*/
 }
 
 .style {
@@ -106,7 +109,7 @@ a:hover {
 }
 
 .beer-rankings, .score {
-	float: right;
+	/*float: right;*/
 	margin-right: 8px;
 	text-align: right;
 	font-size: 12px;
@@ -114,7 +117,7 @@ a:hover {
 }
 
 .divider {
-	border-top: 1px solid #373737;
+	border-top: 1px solid #cacaca;
 	width: 50%;
 	margin-bottom: 8px;
 	margin-left: 50%;
@@ -123,6 +126,8 @@ a:hover {
 .center-text {
 	margin: 15px auto;
 	text-align: center;
+	width: 95%;
+	white-space: normal;
 }
 
 .info-details {
@@ -146,8 +151,10 @@ a:hover {
 	vertical-align: center;
 }
 
-.reviews {
+.reviews, .review-content {
 	display: block;
+	margin: 12px;
+	margin-top: 20px;
 }
 
 .photo-wheel {
@@ -162,5 +169,103 @@ a:hover {
 
 .beer-photos {
 	position: absolute;
-	left: -50px;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	width: 680px;
+}
+
+.overlay, .modal-content {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	z-index: 1000;
+	background-color: rgba(0, 0, 0, .65);
+}
+
+.modal-content {
+	z-index: 10000;
+	overflow: auto;
+	text-align: center;
+}
+
+.modal {
+	position: relative;
+	outline: 0;
+	width: 75%;
+	max-width: 600px;
+	display: inline-block;
+	box-sizing: border-box;
+	background-color: #808080;
+	border-radius: 3px;
+	margin: 3% 30.5%;
+	text-align: left;
+	color: white;
+}
+
+.modal-img {
+	width: 98%;
+	margin: 10px auto;
+	display: block;
+	border-radius: 3px;
+}
+
+.review-header {
+	background-color: #dcdcdc99;
+}
+
+.username-location, .user-rating {
+	display: inline-block;
+	vertical-align: top;
+	margin: 49px 10px;
+}
+
+.username {
+	font-weight: 700;
+}
+
+.location {
+	font-style: italic;
+	font-size: 12px;
+	color: grey;
+}
+
+.user-rating {
+	float: right;
+}
+
+/*.reviews {
+	margin-top: 20px;
+}*/
+
+.review-details {
+	display: inline-block;
+}
+
+/*.review-content {
+	display: block;
+	margin: 12px;
+}*/
+
+.addreview-button {
+	display: block;
+	width: 99%;
+	background-color: #cacaca;
+	border: 1px solid darkslategray;
+	margin-top: 10px;
+}
+
+label {
+	display: block;
+	margin: 15px;
+}
+
+input, select {
+	float: right;
 }
