--- a/client/public/style.css
+++ b/client/public/style.css
@@ -47,7 +47,7 @@ table {
 	border-spacing: 0;
 }
 body {
-	background-color: #060605cc;
+	background-color: #e4e4d6cc;
 	font-family: sans-serif;
 	/*#e1dcc07d*/
 }
@@ -84,11 +84,12 @@ a:hover {
 	width: 98%;
 	max-width: 680px;
 	margin: 5px auto;
-	/*border-radius: 3px;*/
+	border-radius: 3px;
 	background-color: #ffff;
 	overflow: hidden;
 	white-space: nowrap;
-	border: 1px solid #cacaca;
+	border: 1px solid #a0a0a0;
+	box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, .25);
 }
 
 .beer-pic, .addreview-button {
